[CAMEL-16943]MainPropertyPlaceholderWithEnvTest failed with JDK17